--- a/index.html
+++ b/index.html
@@ -23,17 +23,21 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #45BEC6;
+  background-color: #000;
   background-image: url('kapybarav4-background-vertical.png');
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100%;
-  height: 100%;
+  background-position: center center;
+  width: 100vw;
+  height: 92vh;
+  padding: 0px;
+  /* overflow: hidden; */
 
   
   @media (min-width: 768px) {
+    width: 99vw;
     background-image: url('kapybarav4-background-horizontal.png');
-    background-size: cover;
+    background-position: top center;
   }
   
 }
@@ -55,10 +59,12 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.90666rem 0.50666rem;
+    padding: 0.90666rem 0.5rem;
+    gap: 1rem;
 
     @media (min-width: 768px) {
-        padding: 1.0666rem 1.50666rem;
+        gap: 0rem;
+        padding: 1.1rem 1.5rem;
     }
 
     .logo {
@@ -66,11 +72,11 @@ img {
         flex-direction: row;
         align-items: center;
         flex-wrap: nowrap;
-        gap: 0.40666rem;
+        gap: 0.3rem;
 
 
         img {
-            width: 2.1666rem;
+            width: 2.3rem;
 
             @media (min-width: 768px) {
                 width: 3.1666rem;
@@ -79,10 +85,10 @@ img {
         
         p {
             font-family: 'Mochiy Pop One', cursive;
-            font-size: 1.0666rem;
+            font-size: 0.8rem;
             font-weight: 900;
             color: #3D3026;
-            letter-spacing: 2.666px;
+            letter-spacing: 2.1px;
 
             @media (min-width: 768px) {
                 font-size: 1.5666rem;
@@ -94,7 +100,7 @@ img {
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 0.469rem;
+        font-size: 0.44rem;
         font-family: 'Mochiy Pop One', cursive;
         color: #3D3026;
         background-color: #F9E2CA;
@@ -111,12 +117,6 @@ img {
         }
 
     }
-
-    @media (pointer: coarse) {
-        .ca {
-            transform: scale(0.9);
-        }
-    }
 }
 
 main {
@@ -125,13 +125,14 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100%;
     width: 100%;
-    margin-top: 73.666%;
-    padding: 0.90666rem 0.50666rem;
+    height: auto;
+    padding: 1rem;
+    top: 43%;
+    transform: translateY(-43%);
 
     @media (min-width: 768px) {
-        margin-top: 33.666%;
+        top: 72%;
         padding: 1.0666rem 1.50666rem;
     }
     
@@ -152,7 +153,7 @@ main {
 
         a {
             font-family: 'Roboto', sans-serif;
-            font-size: 0.6066rem;
+            font-size: 0.7rem;
             color: #3D3026;
             background-color: #F9E2CA;
             padding: 0.44666rem 0.469rem;
